--- a/gold_v1/pubspec.yaml
+++ b/gold_v1/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  dio: ^5.8.0+1
+  provider: ^6.1.4
+  no_context_navigation: ^3.0.0
 
 dev_dependencies:
   flutter_test:
